Developer/src/objects/Award__c.object
<CustomObject>
    <fields>
        <fullName>ActiveFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>オーディエンス</label>
        <picklist>
            <picklistValues>
                <fullName>１</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>２</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>３</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>４</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>５</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>６</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AwardType__c</fullName>
        <label>Awardタイプ</label>
        <picklist>
            <picklistValues>
                <fullName>自社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>競合</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CategNB__c</fullName>
        <formula>PlansheetPrefix__r.CategNB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリＩＤ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <formula>PlansheetPrefix__r.CategNB__r.CategName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリ名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryNumber__c</fullName>
        <formula>PlansheetPrefix__r.CategNB__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリ番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <label>実施チェーン（複数選択）</label>
        <picklist>
            <picklistValues>
                <fullName>1:イオン</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:イトーヨーカドー</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Chirashi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>チラシ連動</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <formula>PlansheetPrefix__r.ClientNB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>顧客ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <formula>PlansheetPrefix__r.ClientNB__r.ClientName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>顧客名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNumber__c</fullName>
        <formula>PlansheetPrefix__r.ClientNB__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>クライアント番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>PlansheetPrefix__r.ClientNB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>顧客ＩＤ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <formula>PlansheetPrefix__r.ContNB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>コントラクト番号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CpnDesc__c</fullName>
        <label>クーポン適用商品名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <formula>PlansheetPrefix__r.Cycle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>サイクル</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpireDate__c</fullName>
        <label>有効期限日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HakkenNaiyo__c</fullName>
        <label>発券内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HakkenTaisho__c</fullName>
        <label>発券対象</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImageID__c</fullName>
        <label>ImageID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageNumber__c</fullName>
        <label>ImageNumber</label>
        <summarizedField>MCLU__c.ImageNumber__c</summarizedField>
        <summaryForeignKey>MCLU__c.AwardNB__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ImageSrc__c</fullName>
        <label>Image文字列</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KaishuJoken__c</fullName>
        <label>回収条件</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KenmenJunbi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>券面準備</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KikakuBiko__c</fullName>
        <label>企画備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KikakuName__c</fullName>
        <label>企画名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCLU__c</fullName>
        <label>MCLU</label>
        <summarizedField>MCLU__c.MCLUNumber__c</summarizedField>
        <summaryForeignKey>MCLU__c.AwardNB__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MaxExpireDate__c</fullName>
        <label>有効期限日</label>
        <summarizedField>MCLU__c.ExpireDate__c</summarizedField>
        <summaryForeignKey>MCLU__c.AwardNB__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MaxPrintStopDate__c</fullName>
        <label>発券終了日</label>
        <summarizedField>MCLU__c.PrintStopDate__c</summarizedField>
        <summaryForeignKey>MCLU__c.AwardNB__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MessageCoupon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>メッセージクーポン</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MinPrintStartDate__c</fullName>
        <label>発券開始日</label>
        <summarizedField>MCLU__c.PrintStartDate__c</summarizedField>
        <summaryForeignKey>MCLU__c.AwardNB__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumAward__c</fullName>
        <formula>Value(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award番号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfferComment__c</fullName>
        <label>オファーコメント</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferLine__c</fullName>
        <label>クーポン適用商品</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPP__c</fullName>
        <formula>PlansheetPrefix__r.PPP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPP</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlanSheetFileFullPath__c</fullName>
        <label>PlanSheetFileFullPath</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanSheetFileName__c</fullName>
        <label>PlanSheetFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlansheetPrefix__c</fullName>
        <label>PlansheetPrefix</label>
        <referenceTo>ContractCycle__c</referenceTo>
        <relationshipLabel>アワード</relationshipLabel>
        <relationshipName>PlansheetPrefix</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ポップ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrefixCycle__c</fullName>
        <formula>PlansheetPrefix__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrefixCycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintStartDate__c</fullName>
        <label>発券開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrintStopDate__c</fullName>
        <label>発券終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgramShurui__c</fullName>
        <label>プログラム種類</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RedQty__c</fullName>
        <label>回収個数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RedeemUnit__c</fullName>
        <label>回収単位</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesID__c</fullName>
        <formula>PlansheetPrefix__r.SalesNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>担当営業ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesName__c</fullName>
        <formula>PlansheetPrefix__r.SalesNo__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>担当営業</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesType__c</fullName>
        <label>セールスタイプ</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>カードプログラム</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StrBlind__c</fullName>
        <label>Blind文字列</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrMessageCoupon__c</fullName>
        <label>メッセージクーポン文字列</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokubetsuKikaku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>特別企画</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriggerClass__c</fullName>
        <label>トリガクラス</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>値引額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ViewText__c</fullName>
        <label>集計用テキスト</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yobiken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>予備券</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkSpecial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>特別企画</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chkLimit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>枚数制限指定</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chkMain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>交互発券</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chkTime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>時間指定</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chkUnlimited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unlimited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>strActiveFlg__c</fullName>
        <label>Active文字列</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strChainList__c</fullName>
        <label>実施チェーン</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>strChain__c</fullName>
        <label>チェーン文字列</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strChirashi__c</fullName>
        <label>チラシ文字列</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strExpireDate__c</fullName>
        <label>有効期限日文字列</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strLimit__c</fullName>
        <label>枚数制限指定文字列</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strMCLU__c</fullName>
        <formula>TEXT(MCLU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>strMCLU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strMain__c</fullName>
        <label>交互発券文字列</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strPop__c</fullName>
        <label>POP文字列</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strPrintStartDate__c</fullName>
        <label>発券開始日文字列</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strPrintStopDate__c</fullName>
        <label>発券停止日文字列</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strSid__c</fullName>
        <label>カードプログラム文字列</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strTime__c</fullName>
        <label>時間指定文字列</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strTokubetsuKikaku__c</fullName>
        <label>特別企画文字列</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strUnlimited__c</fullName>
        <label>Unlimited文字列</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strYobiken__c</fullName>
        <label>予備券文字列</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <label>回収単位</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>アワード</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ImageID__c</columns>
        <columns>ClientName__c</columns>
        <columns>ActiveFlg__c</columns>
        <columns>TokubetsuKikaku__c</columns>
        <columns>KikakuName__c</columns>
        <columns>OfferLine__c</columns>
        <columns>PrintStartDate__c</columns>
        <columns>PrintStopDate__c</columns>
        <columns>ExpireDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Award番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>